<resources>
    <string name="app_name">ascov</string>

    <string name="datetime_format" translatable="false">dd/MM/yyyy HH:mm</string>
    <string name="date_format" translatable="false">dd/MM/yyyy</string>
    <string name="time_format" translatable="false">HH:mm</string>
    <string name="api_url" translatable="false">https://rbc.gov.rw/community/dev/api/</string>
    <string name="phone_start" translatable="false">078 </string>

    <string name="informations">Amakuru</string>
    <string name="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="start_test">Tangira Ikizamini</string>

    <string name="questions">Ubushakashatsi</string>
    <string name="next_question">Ikibazo gikurikira</string>
    <string name="question_progress">Ikibazo %1$d kuri %2$d</string>
    <string name="unity_height">cm</string>
    <string name="unity_weight">Kg</string>
    <string name="unity_days">iminsi</string>
    <string name="select_option">Hitamo amahitamo.</string>
    <string name="fill_fields">Kuzuza ahari Umwanya.</string>
    <string name="yes">Yego</string>
    <string name="no">Oya</string>
    <string name="not_know">Simbizi</string>

    <string name="phone_question">Imibare ya telefone yawe n\'iyihe?</string>
    <string name="phone_error">Nyamuneka andika numero 10 ya terefone</string>

    <string name="export">Kohereza Hanze</string>
    <string name="to_export">Uwohereje hanze</string>
    <string name="export_text">Ugiye Kohereza Hanze %1$d isuzuma ryakozwe.</string>
    <string name="export_done">Kohereza hanze birarangiye</string>
    <string name="export_error">Ikosa mu kohereza hanze, suzuma umurongo wa Murandasi wanyu.</string>
    <string name="export_restart">Ongera utangire kohereza hanze</string>
    <string name="export_last">Ibyohererejwe hanze kuri %1$s, %2$s.</string>


    <string name="save_and_continue">Uzigame kandi ukomeze</string>
    <string name="results">Ibisubizo</string>
    <string name="restart">Subiramo ikizamini</string>

    <string name="select_option_error">Nyamuneka hitamo inzira imwe</string>
    <string name="city_error">Nyamuneka andika umujyi utuyemo</string>
    <string name="days_error">Nyamuneka Hitamo umubare uri hagati y’iminsi 0 na 35</string>
    <string name="age_error">Nyamuneka hitamo umwaka uri hagati ya 0 na 120</string>
    <string name="height_error">Nyaminuneka hitamo indeshyo iri hagati ya 30 na 220 cm</string>
    <string name="weight_error">Nyamuneka hitamo ibiro biri hagati ya 30 na 220 kg</string>

    <string-array name="questions">
        <!--        <item>Nimero ya telephoni y\'ingingo ?</item>-->
        <!--        <item>Ni uwuhe mujyi w\'ingingo ?</item>-->
        <item>Isomo ryagiye mu gihugu cyangwa mukarere hamweno kwanduza abaturage covid-19 mu minsi 14 mbere y\'uko ibimenyetso bitangira?</item>
        <item>Iyi ngingo yaba yarahuye n\'muntu ushobora kuba ukekwaho coronavirus wanduye mu minsi 14 ishize mbere y\'uko ibimenyetso bitangira ?</item>
        <item>Ingingo ivuga ko yari afite umuriro?</item>
        <item>Ni ubuhe bushyuhe bw\'ingingo bupimwe ku bwe cyangwa ko upima mu gihe cyo kubazwa ?</item>
        <item>Igihe kingana iki ingingo ifite umuriro?</item>
        <item>Ese ingingo ifite inkorora isanzwe cyangwa kwiyongera kwinkorora mu minsi yashize?</item>
        <item>Ingingo yaba idashobora kurya cyangwa kunywa mu masaha 24 cyangwa arenga ?</item>
        <item>Mu masaha 24 ashize ingingo\n Yabonye impinduka mu guhumeka bidasanzwe mugihe avuga cyangwa ugerageje gushiramo imbaraga nke?</item>
        <item>Iyi n ginngo yaba yaragize ububabare mu guhumeka mu minsi ishize?</item>
        <item>Ingingo yabonye igabanuka rikabije ry\'uburyohe cyangwa impumuro mbi mu minsi yashize ?</item>
        <item>Ingingo hari ububabare ryagize budasanzwe bw\'imitsi cyangwa ububabare mu minsi yashize?</item>
        <item>Ingingo yagize impiswi mu masaha 24 ashize (byibuze intebe 3 zidakabije) ?</item>
        <item>Ingingo ifite imyaka ingahe?</item>
        <item>N imyaka ingahe y\'isomo ?</item>
        <item>Ni ubuhe bwoko bw\’ingingo?</item>
        <item>Ingingo ifite ifite ibiro bingahe?</item>
        <item>Ingingo ingana gute ?</item>
        <item>Ingingo ifite umuvuduko ukabije w\'amaraso? Cyangwa afite umutima cyangwa indwara y amaraso? Ingingo yivuza umutima ?</item>
        <item>Ingingo yaba afite ikibazo cy\'umutima ?</item>
        <item>Ingingo yarwaye kanseri mu myaka 3 ishize?</item>
        <item>Ese ingingo ifite uburwayi bw\' ubuhumekero buzwi?</item>
        <item>Ese yaba atwite ?</item>
    </string-array>


    <string-array name="choices">
        <!--        <item></item>-->
        <!--        <item></item>-->
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>&lt; 38°|≥ 38°</item>
        <item>iminsi</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>&lt; 50 imyaka|50-69 imyaka|70 imyaka</item>
        <item>imyaka</item>
        <item>Umugore|Umugabo</item>
        <item>Kg|Simbizi</item>
        <item>cm|Simbizi</item>
        <item>Yego|Oya|Simbizi</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya</item>
        <item>Yego|Oya|Ntibikurikizwa</item>
    </string-array>

    <string-array name="question_types">
        <!--        <item>tel</item>-->
        <!--        <item>city</item>-->
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>double</item>
        <item>digit_forced</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>ternary</item>
        <item>digit_forced</item>
        <item>double</item>
        <item>digit</item>
        <item>digit</item>
        <item>ternary</item>
        <item>binary</item>
        <item>binary</item>
        <item>binary</item>
        <item>ternary</item>
    </string-array>

    <string name="result1">Ibintu birashoboka ko atari inshingano za covid-19 saba ingingo kugaruka ku kureba niba ibimenyetso bishya bigaragar.</string>
    <string name="result2">Ohereza ingingo ku kigo nderabuzima kugirango isuzumwe n umuforomo.</string>
    <string name="result3">Ibintu birashoboka kuvuka kuri COVID-19. Ohereza ingingo kubigo nderabuzima kugirango bisuzumwe n umuforomo.</string>
    <string name="result3bis">Ibintu birashoboka kuvuka kuri COVID-19. Ngana ibitaro by\'Akarerekubera ikimenyetso cy\'ingufu zijyanye.</string>
    <string name="result4">Ibintu birashokoka kuvuka kuri COVID-19. Ngana ku kigo nderabuzima kugirango bisuzumwe n\'umuforomo.</string>
    <string name="result5">Ohereza ingingo byihutirwa mu bitaro by’Akarere kugirango asuzumwe na muganga.</string>

    <string name="question_example">Avez-vous de l’hypertension artérielle mal équilibrée ? Ou avez-vous une maladie cardiaque ou vasculaire ? Prenez-vous un traitement pour le cœur ? </string>
    <string name="export_example">Vous êtes sur le point d’exporter les 213 précédents diagnostics effectués.\n\nLe dernière export date du 21/06/20, à 21h15.</string>
    <string name="results_example">Votre situation peut relever d’un COVID-19. A adresser au centre de santé pour évaluation par un(e) infirmier(e).</string>
    <string name="title_activity_rdt">RdtActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>