<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_f8f8f8"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/shape_bullet"
                android:textColor="@color/white"
                android:text="1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                style="@style/TitleText"
                android:text="@string/informations"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:paddingStart="10dp" />

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_start"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/phone_question"
                style="@style/DefaultText"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/fill_fields"
                style="@style/AnswerTitleText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="15dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:inputType="phone"
                    android:text="078 "
                    android:background="@drawable/edit_bg"/>


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:visibility="invisible"
                android:text="@string/phone_error"
                style="@style/ErrorText"/>
        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/save_and_continue"
        style="@style/BottomFormButton"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>